--- a/jobs.yml
+++ b/jobs.yml
@@ -3,21 +3,21 @@ jobs:
     type: manifest
     steps:
       - GET: resourcevtest-image1
-      - GET: resourcev-ecsparam
+     # - GET: resourcev-ecsparam
     #  - GET: resourcev-dockeroption
       
-  - name: jobvmanifest2
-    type: manifest
-    steps:
+ # - name: jobvmanifest2
+  #  type: manifest
+ #   steps:
      # - PUT: resourcevtest-image1
-      - GET: resourcevtest-image2
-      - GET: resourcev-ecsparam
+  #    - GET: resourcevtest-image2
+  #    - GET: resourcev-ecsparam
       
-  - name: jobvmanifest3
-    type: manifest
-    steps:
-      - GET: jobvmanifest1
-      - GET: jobvmanifest2
+ # - name: jobvmanifest3
+  #  type: manifest
+  #  steps:
+   #   - GET: jobvmanifest1
+  #    - GET: jobvmanifest2
       
   #- name: jobvecsdeploy1
    # type: escDeploy
