--- a/jobs.yml
+++ b/jobs.yml
@@ -3,25 +3,12 @@ jobs:
     type: manifest
     steps:
       - GET: resourcevtest-image1
-      - GET: resourcev-ecsparam
-    #  - GET: resourcev-dockeroption
+      - GET: resourcevtest-dockeroption1
+      - GET: resourcevtest-param1
       
   - name: jobvmanifest2
     type: manifest
     steps:
-     # - PUT: resourcevtest-image1
+      - GET: resourcevtest-replica1
       - GET: resourcevtest-image2
-      - GET: resourcev-ecsparam
-      
-  - name: jobvmanifest3
-    type: manifest
-    steps:
-      - GET: jobvmanifest1
-      - GET: jobvmanifest2
-      
-  #- name: jobvecsdeploy1
-   # type: escDeploy
-   # steps:
-    #  - GET: jobvmanifest3
-    #  - GET: resourcevtest-ecscluster1
-      
+      - GET: resourcevtest-dockeroption1
