--- a/resources.yml
+++ b/resources.yml
@@ -15,9 +15,22 @@ resources:
       isPull: true
       tag: latest
       
- # - name: resourcevtest-ecscluster1
-  #  type: ecsCluster
-   # integration: cock1-ecscluster
-  #  source:
-   #   name : "testCL" #name of the cluster we are deploying
-    #  region: "us-west-2"
+  - name: resourcevtest-dockeroption1
+    type: dockerOptions
+    source:
+      memory: 64
+      cpu-shares: 256
+      portMappings:
+        - 80:80
+
+  - name: resourcevtest-param1
+    type: params
+    source:
+      params:
+        MONGO_API_URL: "localhost:28017"
+        
+  - name: resourcevtest-replica1
+    type: replicas
+    source:
+      count: 1
+        
