--- a/jobs.yml
+++ b/jobs.yml
@@ -2,13 +2,22 @@ jobs:
   - name: jobvmanifest1
     type: manifest
     steps:
-      - GET: resourcevtest-image1
+      - GET: resourcevtest-image3
       - GET: resourcevtest-dockeroption1
       - GET: resourcevtest-param1
       
   - name: jobvmanifest2
     type: manifest
     steps:
-      - GET: resourcevtest-replica1
-      - GET: resourcevtest-image2
-      - GET: resourcevtest-dockeroption1
+      - GET: resourcevtest-replica2
+      - GET: resourcevtest-image3
+      - GET: resourcevtest-dockeroption2
+      
+  - name: jobvmanifest2
+    type: manifest
+    steps:
+      - GET: resourcevtest-replica2
+      - GET: resourcevtest-param2
+      - GET: resourcevtest-image4
+      - GET: resourcevtest-image4
+      - GET: resourcevtest-dockeroption2
