--- a/resources.yml
+++ b/resources.yml
@@ -1,5 +1,5 @@
 resources:
-  - name: resourcevtest-image1
+  - name: test6064-image1
     type: image
     integration: cock1-hub #your subs integration for docker hub
     source:
@@ -7,15 +7,15 @@ resources:
       isPull: false
       tag: latest
       
-  - name: resourcevtest-image2
-    type: image
-    integration: cock1-hub #your subs integration for docker hub
-    source:
-      name: "shiphitchcock1/sample_python"
-      isPull: true
-      tag: latest
+ # - name: test6064-image2
+  #  type: image
+   # integration: cock1-hub #your subs integration for docker hub
+   # source:
+   #   name: "shiphitchcock1/sample_python"
+   #   isPull: true
+   #   tag: latest
       
-  - name: resourcevtest-dockeroption1
+  - name: test6064-dockeroption1
     type: dockerOptions
     source:
       memory: 64
@@ -23,13 +23,13 @@ resources:
       portMappings:
         - 80:80
 
-  - name: resourcevtest-param1
+  - name: test6064-param1
     type: params
     source:
       params:
         MONGO_API_URL: "localhost:28017"
         
-  - name: resourcevtest-replica1
+  - name: test6064-replica1
     type: replicas
     source:
       count: 1
