--- a/resources.yml
+++ b/resources.yml
@@ -33,4 +33,10 @@ resources:
     type: replicas
     source:
       count: 1
-        
+      
+  - name: test6064-ecscluster1
+    type: ecsCluster
+    integration: cock1-ecscluster
+    source:
+      name : "testCL" #name of the cluster we are deploying
+      region: "us-west-2"
