--- a/resources.yml
+++ b/resources.yml
@@ -7,13 +7,13 @@ resources:
       isPull: false
       tag: latest
       
- # - name: test6064-image2
-  #  type: image
-   # integration: cock1-hub #your subs integration for docker hub
-   # source:
-   #   name: "shiphitchcock1/sample_python"
-   #   isPull: true
-   #   tag: latest
+  - name: test6064-image2
+    type: image
+    integration: cock1-hub #your subs integration for docker hub
+    source:
+      name: "shiphitchcock1/sample_python"
+      isPull: true
+      tag: latest
       
   - name: test6064-dockeroption1
     type: dockerOptions
