--- a/jobs.yml
+++ b/jobs.yml
@@ -4,7 +4,7 @@ jobs:
     steps:
       - GET: test6064-image1
       - GET: test6064-dockeroption1
-      - GET: test6064-param1
+      #- GET: test6064-param1
       - GET: test6064-replica2
       
   - name: jobtest6064-ecsdeploy1
