--- a/jobs.yml
+++ b/jobs.yml
@@ -4,11 +4,11 @@ jobs:
     steps:
       - GET: resourcevtest-image1
       - GET: resourcevtest-dockeroption1
-     # - GET: resourcevtest-param1
+      - GET: resourcevtest-param1
       
   - name: jobvmanifest2
     type: manifest
     steps:
-    #  - GET: resourcevtest-replica1
+      - GET: resourcevtest-replica1
       - GET: resourcevtest-image2
       - GET: resourcevtest-dockeroption1
