--- a/resources.yml
+++ b/resources.yml
@@ -15,6 +15,14 @@ resources:
       isPull: true
       tag: latest
       
+  - name: resourcevtest-image3
+    type: image
+    integration: cock1-hub #your subs integration for docker hub
+    source:
+      name: "shiphitchcock1/samplenod"
+      isPull: false
+      tag: latest
+      
   - name: resourcevtest-dockeroption1
     type: dockerOptions
     source:
