--- a/resources.yml
+++ b/resources.yml
@@ -71,6 +71,78 @@ resources:
       isPull: false
       tag: latest
       
+  - name: resourcevtest-image10
+    type: image
+    integration: cock1-hub #your subs integration for docker hub
+    source:
+      name: "shiphitchcock1/testsamplenode"
+      isPull: false
+      tag: latest
+      
+  - name: resourcevtest-image11
+    type: image
+    integration: cock1-hub #your subs integration for docker hub
+    source:
+      name: "shiphitchcock1/sample_python"
+      isPull: true
+      tag: latest
+      
+  - name: resourcevtest-image12
+    type: image
+    integration: cock1-hub #your subs integration for docker hub
+    source:
+      name: "shiphitchcock1/samplenod"
+      isPull: false
+      tag: latest
+      
+  - name: resourcevtest-image13
+    type: image
+    integration: cock1-hub #your subs integration for docker hub
+    source:
+      name: "shiphitchcock1/testsamplenode"
+      isPull: false
+      tag: latest
+      
+  - name: resourcevtest-image14
+    type: image
+    integration: cock1-hub #your subs integration for docker hub
+    source:
+      name: "shiphitchcock1/sample_python"
+      isPull: true
+      tag: latest
+      
+  - name: resourcevtest-image15
+    type: image
+    integration: cock1-hub #your subs integration for docker hub
+    source:
+      name: "shiphitchcock1/samplenod"
+      isPull: false
+      tag: latest
+      
+  - name: resourcevtest-image16
+    type: image
+    integration: cock1-hub #your subs integration for docker hub
+    source:
+      name: "shiphitchcock1/testsamplenode"
+      isPull: false
+      tag: latest
+      
+  - name: resourcevtest-image17
+    type: image
+    integration: cock1-hub #your subs integration for docker hub
+    source:
+      name: "shiphitchcock1/sample_python"
+      isPull: true
+      tag: latest
+      
+  - name: resourcevtest-image18
+    type: image
+    integration: cock1-hub #your subs integration for docker hub
+    source:
+      name: "shiphitchcock1/samplenod"
+      isPull: false
+      tag: latest
+      
   - name: resourcevtest-dockeroption1
     type: dockerOptions
     source:
