--- a/jobs.yml
+++ b/jobs.yml
@@ -12,6 +12,15 @@ jobs:
       - GET: resourcevtest-replica1
       - GET: resourcevtest-image2
       - GET: resourcevtest-dockeroption1
+      - PUT: resourcevtest-image10
+      - PUT: resourcevtest-image11
+      - PUT: resourcevtest-image12
+      - PUT: resourcevtest-image13
+      - PUT: resourcevtest-image14
+      - PUT: resourcevtest-image15
+      - PUT: resourcevtest-image16
+      - PUT: resourcevtest-image17
+      - PUT: resourcevtest-image18
       
   - name: jobvmanifest3
     type: manifest
@@ -28,7 +37,6 @@ jobs:
   - name: jobvmanifest4
     type: manifest
     steps:
-     # - GET: jobvmanifest3
       - GET: resourcevtest-image4
       - GET: resourcevtest-image5
       - GET: resourcevtest-image6
