--- a/resources.yml
+++ b/resources.yml
@@ -161,3 +161,10 @@ resources:
     type: replicas
     source:
       count: 1
+      
+  - name: e2eplv2-gitrepo
+    type: gitRepo
+    integration: github
+    source:
+      name: "shiphitchcock1/e2e-plv2" #you should've access to this project (even if it's public)
+      branch: master
