--- a/resources.yml
+++ b/resources.yml
@@ -164,7 +164,7 @@ resources:
       
   - name: e2eplv2-gitrepo
     type: gitRepo
-    integration: github
+    integration: cock1-github
     source:
       name: "shiphitchcock1/e2e-plv2" #you should've access to this project (even if it's public)
       branch: master
