--- a/resources.yml
+++ b/resources.yml
@@ -1,170 +1,9 @@
 resources:
-  - name: resourcevtest-image1
+  - name: res-img1
     type: image
     integration: cock1-hub #your subs integration for docker hub
     source:
       name: "shiphitchcock1/testsamplenode"
       isPull: false
       tag: latest
-      
-  - name: resourcevtest-image2
-    type: image
-    integration: cock1-hub #your subs integration for docker hub
-    source:
-      name: "shiphitchcock1/sample_python"
-      isPull: true
-      tag: latest
-      
-  - name: resourcevtest-image3
-    type: image
-    integration: cock1-hub #your subs integration for docker hub
-    source:
-      name: "shiphitchcock1/samplenod"
-      isPull: false
-      tag: latest
-      
-  - name: resourcevtest-image4
-    type: image
-    integration: cock1-hub #your subs integration for docker hub
-    source:
-      name: "shiphitchcock1/testsamplenode"
-      isPull: false
-      tag: latest
-      
-  - name: resourcevtest-image5
-    type: image
-    integration: cock1-hub #your subs integration for docker hub
-    source:
-      name: "shiphitchcock1/sample_python"
-      isPull: true
-      tag: latest
-      
-  - name: resourcevtest-image6
-    type: image
-    integration: cock1-hub #your subs integration for docker hub
-    source:
-      name: "shiphitchcock1/samplenod"
-      isPull: false
-      tag: latest
-      
-  - name: resourcevtest-image7
-    type: image
-    integration: cock1-hub #your subs integration for docker hub
-    source:
-      name: "shiphitchcock1/testsamplenode"
-      isPull: false
-      tag: latest
-      
-  - name: resourcevtest-image8
-    type: image
-    integration: cock1-hub #your subs integration for docker hub
-    source:
-      name: "shiphitchcock1/sample_python"
-      isPull: true
-      tag: latest
-      
-  - name: resourcevtest-image9
-    type: image
-    integration: cock1-hub #your subs integration for docker hub
-    source:
-      name: "shiphitchcock1/samplenod"
-      isPull: false
-      tag: latest
-      
-  - name: resourcevtest-image10
-    type: image
-    integration: cock1-hub #your subs integration for docker hub
-    source:
-      name: "shiphitchcock1/testsamplenode"
-      isPull: false
-      tag: latest
-      
-  - name: resourcevtest-image11
-    type: image
-    integration: cock1-hub #your subs integration for docker hub
-    source:
-      name: "shiphitchcock1/sample_python"
-      isPull: true
-      tag: latest
-      
-  - name: resourcevtest-image12
-    type: image
-    integration: cock1-hub #your subs integration for docker hub
-    source:
-      name: "shiphitchcock1/samplenod"
-      isPull: false
-      tag: latest
-      
-  - name: resourcevtest-image13
-    type: image
-    integration: cock1-hub #your subs integration for docker hub
-    source:
-      name: "shiphitchcock1/testsamplenode"
-      isPull: false
-      tag: latest
-      
-  - name: resourcevtest-image14
-    type: image
-    integration: cock1-hub #your subs integration for docker hub
-    source:
-      name: "shiphitchcock1/sample_python"
-      isPull: true
-      tag: latest
-      
-  - name: resourcevtest-image15
-    type: image
-    integration: cock1-hub #your subs integration for docker hub
-    source:
-      name: "shiphitchcock1/samplenod"
-      isPull: false
-      tag: latest
-      
-  - name: resourcevtest-image16
-    type: image
-    integration: cock1-hub #your subs integration for docker hub
-    source:
-      name: "shiphitchcock1/testsamplenode"
-      isPull: false
-      tag: latest
-      
-  - name: resourcevtest-image17
-    type: image
-    integration: cock1-hub #your subs integration for docker hub
-    source:
-      name: "shiphitchcock1/sample_python"
-      isPull: true
-      tag: latest
-      
-  - name: resourcevtest-image18
-    type: image
-    integration: cock1-hub #your subs integration for docker hub
-    source:
-      name: "shiphitchcock1/samplenod"
-      isPull: false
-      tag: latest
-      
-  - name: resourcevtest-dockeroption1
-    type: dockerOptions
-    source:
-      memory: 64
-      cpu-shares: 256
-      portMappings:
-        - 80:80
-
-  - name: resourcevtest-param1
-    type: params
-    source:
-      params:
-        MONGO_API_URL: "localhost:28017"
-        
-  - name: resourcevtest-replica1
-    type: replicas
-    source:
-      count: 1
-      
-  - name: e2eplv2-gitrepo1
-    type: gitRepo
-    integration: cock1-github
-    source:
-      name: "shiphitchcock1/e2e-plv2" #you should've access to this project (even if it's public)
-      branch: master
+  
