--- a/resources.yml
+++ b/resources.yml
@@ -6,4 +6,11 @@ resources:
       name: "shiphitchcock1/testsamplenode"
       isPull: false
       tag: latest
-  
+      
+  - name: res-img2
+    type: image
+    integration: cock1-hub #your subs integration for docker hub
+    source:
+      name: "shiphitchcock1/testsamplenode"
+      isPull: false
+      tag: latest
