--- a/jobs.yml
+++ b/jobs.yml
@@ -4,3 +4,9 @@ jobs:
     steps:
       - GET: res-img1
       - GET: res-img2
+      
+  - name: jobmf2
+    type: manifest
+    steps:
+      - PUT: res-img3
+      - PUT: res-img4
