--- a/jobs.yml
+++ b/jobs.yml
@@ -3,10 +3,10 @@ jobs:
     type: manifest
     steps:
       - GET: res-img1
-     # - GET: res-img2
+      - GET: res-img2
       
   - name: jobmf4
     type: manifest
     steps:
       - GET: res-img3 
-     # - GET: res-img4
+      - GET: res-img4
