--- a/jobs.yml
+++ b/jobs.yml
@@ -2,8 +2,8 @@ jobs:
   - name: jobmf3
     type: manifest
     steps:
-      - GET: res-img1
-      - GET: res-img2
+      - PUT: res-img1
+      - PUT: res-img2
       
   - name: jobmf4
     type: manifest
