--- a/jobs.yml
+++ b/jobs.yml
@@ -3,10 +3,10 @@ jobs:
     type: manifest
     steps:
       - PUT: res-img1
-      - PUT: res-img2
+     # - PUT: res-img2
       
   - name: jobmf4
     type: manifest
     steps:
       - PUT: res-img3 
-      - PUT: res-img4
+     # - PUT: res-img4
