--- a/jobs.yml
+++ b/jobs.yml
@@ -2,11 +2,11 @@ jobs:
   - name: jobmf3
     type: manifest
     steps:
-      - PUT: res-img1
+      - GET: res-img1
      # - PUT: res-img2
       
   - name: jobmf4
     type: manifest
     steps:
-      - PUT: res-img3 
+      - GET: res-img3 
      # - PUT: res-img4
