--- a/jobs.yml
+++ b/jobs.yml
@@ -2,7 +2,7 @@ jobs:
   - name: jobmf3
     type: manifest
     steps:
-      - PUT: res-img1
+      - GET: res-img1
      # - PUT: res-img2
       
   - name: jobmf4
