--- a/jobs.yml
+++ b/jobs.yml
@@ -10,3 +10,8 @@ jobs:
     steps:
       - GET: res-img3 
      # - PUT: res-img4
+     
+  - name: jobmf5
+    type: manifest
+    steps:
+      - PUT: res-img3
