--- a/jobs.yml
+++ b/jobs.yml
@@ -3,15 +3,10 @@ jobs:
     type: manifest
     steps:
       - GET: res-img1
-     # - PUT: res-img2
+     # - GET: res-img2
       
   - name: jobmf4
     type: manifest
     steps:
-      - GET: res-img3 
+      - PUT: res-img3 
      # - PUT: res-img4
-     
-  - name: jobmf5
-    type: manifest
-    steps:
-      - PUT: res-img2
