--- a/jobs.yml
+++ b/jobs.yml
@@ -2,7 +2,7 @@ jobs:
   - name: jobmf11
     type: manifest
     steps:
-      - GET: res-img1
+      - PUT: res-img1
      # - GET: res-img2
       
   #- name: jobmf4
