--- a/jobs.yml
+++ b/jobs.yml
@@ -4,6 +4,12 @@ jobs:
     steps:
       - GET: res-img2
      # - GET: res-img2
+     
+  - name: jobmf22
+    type: manifest
+    steps:
+      - GET: res-img1
+     # - GET: res-img2
       
   #- name: jobmf4
    # type: manifest
