--- a/shippable.resources.yml
+++ b/shippable.resources.yml
@@ -10,7 +10,7 @@ resources:
       
   - name: tri-upimg2
     type: image
-    integration: cock1-hub
+    #integration: cock1-hub
     pointer:
       sourceName: "shiphitchcock1/betaci_nod_limitless_pl"
       isPull: false
