--- a/shippable.jobs.yml
+++ b/shippable.jobs.yml
@@ -7,8 +7,8 @@ jobs:
       - GET: tri-updopt1
       - GET: tri-updopt2
       
-  - name: r-manifest2
-    type: manifest
-    steps:
-      - GET: tri-upimg2
-      - GET: triggerup2
+  #- name: r-manifest2
+   # type: manifest
+    #steps:
+     # - GET: tri-upimg2
+      #- GET: triggerup2
