--- a/shippable.resources.yml
+++ b/shippable.resources.yml
@@ -8,14 +8,14 @@ resources:
     initialVersion:
       versionName: "deploy.4"
       
-  - name: tri-upimg2
-    type: image
+  #- name: tri-upimg2
+   # type: image
     #integration: cock1-hub
-    pointer:
-      sourceName: "shiphitchcock1/betaci_nod_limitless_pl"
-      isPull: false
-    initialVersion:
-      versionName: "deploy.5"
+    #pointer:
+     # sourceName: "shiphitchcock1/betaci_nod_limitless_pl"
+      #isPull: false
+    #initialVersion:
+     # versionName: "deploy.5"
 
   - name: tri-updopt1
     type: dockerOptions
