--- a/shippable.resources.yml
+++ b/shippable.resources.yml
@@ -8,6 +8,18 @@ resources:
     initialVersion:
       versionName: "deploy.4"
       
+  - name: tri-upparam1
+    type: params
+    pointer:
+      params:
+        api_url : "betaapi.shippable.co"
+        MONGO_API_URL: "localhost:28017"
+        
+  - name: tri-upparam1
+    type: replicas
+    pointer:
+      count: 1
+      
   #- name: tri-upimg2
    # type: image
     #integration: cock1-hub
